# muddymask

./: .gitignore  CMakeLists.txt  README  config.h.cmake  config.hpp.cmake
cmake/: check_target.cmake  common.cmake  config.cmake  config.h.in  cross_compile.cmake  cross_win32.cmake  find_root_path.sh  gcc.cmake  msvc.cmake  vc.cmake
include/muddy/adapter/: Tuntap.hpp  Tuntap_linux.hpp  Tuntap_win32.hpp
include/muddy/common/: ConfigParser.hpp  Configuration.hpp  InitGlobal.hpp  InitManager.hpp  Registry.hpp  StackTrace.hpp  except.hpp  helper.hpp  wrapper.hpp
include/muddy/common/algorithm/: HashMap.hpp  Math.hpp
include/muddy/common/compat/: memory  stdint.h
include/muddy/common/crypto/: Dummy.hpp  hash.hpp
include/muddy/common/except/: BadErrno.hpp  ConfigError.hpp  IgnoredExcept.hpp  InvalidArgument.hpp  LostOurWay.hpp  SystemError_unix.hpp  SystemError_win32.hpp  Unpossible.hpp  WinApiError.hpp  WrongAssertion.hpp
include/muddy/common/inet/: DatagramSocket.hpp  DatagramSocket_win32.hpp  WinsockInitHelper.hpp
include/muddy/common/logging/: Composer.hpp  Logger.hpp  log.hpp  misc.hpp
include/muddy/common/mm/: AlignedAllocator.hpp  ArenaAllocator.hpp
include/muddy/common/thread/: Thread.hpp  Thread_posix.hpp  Thread_win32.hpp  shared_mutex.hpp  sync.hpp  sync_win32.hpp
include/muddy/common/tpl/: README  align.hpp  concat.hpp  shared_lock.hpp  toString.hpp
include/muddy/common/util/: define.hpp  inet.hpp  misc.hpp  net.hpp  path.hpp
include/muddy/common/wrapper/: imagehlp.hpp  inet.hpp  inet_posix.hpp  inet_win32.hpp  inner.hpp  libc.hpp  socket.hpp  socket_unix.hpp  socket_win32.hpp  unix.hpp  win32.hpp  windows.hpp  wrapper.hpp  wrapper_unix.hpp  wrapper_win32.hpp
include/muddy/compat/: memory  misc.hpp  stdint.h
include/muddy/crypto/: DummyCrypto.hpp
include/muddy/net/: DatagramSocket.hpp  StartWSA.hpp  closeSocketHandle.hpp
include/muddy/support/: net.hpp
include/muddy/tunnel/: Cryptographer.hpp  TunnelClient.hpp  TunnelServer.hpp  packet.hpp  protocol.hpp
include/muddy/veth/: Tuntap.hpp
misc/: sync.sh
source/: CMakeLists.txt
source/adapter/: CMakeLists.txt  Tuntap_linux.cpp  Tuntap_win32.cpp
source/common/: CMakeLists.txt  ConfigParser.cpp  Configuration.cpp  InitManager.cpp  Registry.cpp  StackTrace_android.cpp  StackTrace_unix.cpp  StackTrace_win32.cpp  except.cpp
source/common/crypto/: Dummy.cpp  hash.cpp
source/common/inet/: DatagramSocket.cpp  DatagramSocket_win32.cpp
source/common/logging/: Logger.cpp
source/common/mm/: AlignedAllocator_unix.cpp  AlignedAllocator_win32.cpp
source/common/thread/: Thread_posix.cpp  Thread_win32.cpp  shared_mutex.cpp  sync_win32.cpp
source/common/util/: inet.cpp  misc.cpp  net.cpp  path.cpp
source/crypto/: CMakeLists.txt  DummyCrypto.cpp
source/net/: CMakeLists.txt  DatagramSocket.cpp  DatagramSocket_unix.cpp  DatagramSocket_win32.cpp  StartWSA.cpp
source/tunnel/: CMakeLists.txt  Cryptographer.cpp  TunnelClient.cpp  TunnelServer.cpp  client.cpp  main.cpp  server.cpp
source/veth/: CMakeLists.txt  Tuntap_unix.cpp  Tuntap_win32.cpp
